# torchtune_config_writer

./: .gitignore  CLAUDE.md  CRUIJFF_KIT_V1_SUMMARY.md  DEFINITIONS.md  README.md  REFACTORING_PLAN.md  SETUP.md  SPEC.md  SPEC_REVIEW_SUMMARY.md  pyproject.toml  setup.sh
.claude/skills/: wireframe-spec.md
.claude/skills/git-commit-push/: SKILL.md
appendices/: A_merge_semantics.md  C_high_level_methods.md  D_metadata.md  E_testing.md  F_experiment_definition.md  F_gpu_efficiency.md
appendices/archive/: B_config_loading.md  README.md
appendices/archive/lora_rank_with_eval/: ADAPTER_OPTIONS.md  README.md  WHY_B2_NEEDS_VERIFICATION.md  eval_adapter_merge.py  experiment.yaml
example_configs/lora_rank_with_eval/: ADAPTER_OPTIONS.md  README.md  eval_adapter_direct.py  experiment.yaml  experiment_adapter_only.yaml
example_configs/lora_rank_with_eval/evals/: domain_qa.py  mmlu_subset.py
example_configs/lora_rank_with_eval/evals/data/: domain_qa_test.jsonl
example_configs/simple_lora_rank_sweep/: README.md  experiment.yaml
torchtune_config_writer/: __init__.py
