# NOTE: This component will be integrated into the cruijff_kit monorepo as cruijff_kit.torchtune
# Current standalone structure is for development and spec review.
# After integration, this will be part of the main cruijff_kit package.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["torchtune_config_writer"]

[project]
name = "cruijff-kit-torchtune"
version = "0.1.0"
description = "Torchtune config generation component for cruijff_kit - generates torchtune YAML configs from experiment definitions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "cruijff_kit contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies - what users need to run the tool
# Note: torchtune must be installed with CLI tools ('tune' command)
dependencies = [
    "torchtune>=0.3.0,<0.5.0",  # Tighter constraint until config format stability verified
    "torchao>=0.14.0",
    "pyyaml>=6.0,<7.0",
]

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Tool configurations
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["torchtune_config_writer"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["torchtune_config_writer"]
